--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^8.0.7",
     "react-modal-hook": "^3.0.2",
+    "replicate": "^0.16.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
