--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-markdown": "^8.0.7",
     "react-modal-hook": "^3.0.2",
     "replicate": "^0.16.1",
+    "stripe": "^13.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
